--- a/hystrix-dashboard/src/main/webapp/index.html
+++ b/hystrix-dashboard/src/main/webapp/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-	<title>Hystrix Dashboard</title>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<title>Hystrix Dashboard</title>
+
 	<!-- Our custom CSS -->
 	<link rel="stylesheet" type="text/css" href="./index.css" />
+
 	<!-- Javascript to monitor and display -->
 	<script src="./js/jquery.min.js" type="text/javascript"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+
 	<script>
 		var streams = [];
 		function addStream () {
@@ -18,15 +21,18 @@
 					auth: $('#authorization').val(),
 					delay: $('#delay').val()
 				};
+
 				streams.push(s);
 				$('#streams').html('<table>' + _.reduce(streams, function(html, s) {
-							return html + '<tr><td>' + s.name + '</td><td>' + s.stream + '</td> <td><a href="#" onclick="removeStream(this);">Remove</a></td> </tr>';
-						}, '') + '</table>');
+                            return html + '<tr><td>' + s.name + '</td><td>' + s.stream + '</td> <td><a href="#" onclick="removeStream(this);">Remove</a></td> </tr>';
+				}, '') + '</table>');
+
 				$('#message').html("");
 			} else {
 				$('#message').html("The 'stream' value is required.");
 			}
 		}
+
 		function monitorStreams () {
 			if (streams.length) {
 				location.href = './monitor/monitor.html?streams=' + encodeURIComponent(JSON.stringify(streams));
@@ -34,6 +40,7 @@
 				$('#message').html("Add Streams to monitor, before starting to monitor.");
 			}
 		}
+
 		var mapInstanceToOption = function (instance) {
 			var ipAddr = $(instance).find("ipAddr")[0].innerHTML;
 			var port = $(instance).find("port")[0].innerHTML;
@@ -54,18 +61,21 @@
 			$("#title").val(appName);
 		};
 		var removeStream = function(element) {
-			var $tr = $(element).closest("tr");
-			var url = $tr.find("td:nth-child(2)").text();
-			for (var i = 0; i < streams.length; i++) {
-				if(streams[i].stream === url) {
-					streams.splice(i, 1);
-					break;
-				}
-			}
-			$tr.remove();
-		};
+		    var $tr = $(element).closest("tr");
+            var url = $tr.find("td:nth-child(2)").text();
+
+            for (var i = 0; i < streams.length; i++) {
+                if(streams[i].stream === url) {
+                    streams.splice(i, 1);
+                    break;
+                }
+            }
+
+            $tr.remove();
+        };
+
 		var fetchEurekaAppList = function (e) {
-			var url = $('#eurekaURL').val();
+			var url = window.location.pathname + "eureka?url=" + $('#eurekaURL').val();
 			var $eurekaApp = $('#eurekaApp');
 			$.ajax({
 				type:"GET",
@@ -103,15 +113,19 @@
 				}
 			});
 		};
+
 		$(document).ready(function () {
 			$('#stream').keypress(function (e) {
 				if (e.which == 13) {
 					monitorStreams();
 				}
 			});
+
 			$('#eurekaURL').on('input', fetchEurekaAppList);
+
 			// setup handlers for selecting an application
 			$("#eurekaApp").on('change click', updateStreamUrlForEurekaApp);
+
 			// setup handler for stream type changing
 			$("[name='streamType']").on('change', updateStreamUrlForEurekaApp);
 		});
@@ -119,39 +133,46 @@
 </head>
 <body>
 <div style="width:800px;margin:0 auto;">
+
 	<center>
-		<img width="264" height="233" src="./images/hystrix-logo.png">
-		<br>
-		<br>
-		<h2>Hystrix Dashboard</h2>
-		Eureka URL: <input id="eurekaURL" name="eurekaURL" class="eurekaURL" type="text" size="42" placeholder="http://hostname:8080/eureka/v2/apps"> <br>
-		Eureka Application:
-		<select id="eurekaApp" name="eurekaApp" class="eurekaApp">
-			<option selected disabled>Choose here</option>
-		</select>
-		Stream Type:
-		Hystrix <input type="radio" name="streamType" value="hystrix.stream">
-		Turbine <input type="radio" name="streamType" value="turbine.stream" checked> <br><br>
-		<input id="stream" type="textfield" size="120" placeholder="http://hostname:port/turbine/turbine.stream"></input>
-		<br><br>
-		<i>Cluster via Turbine (default cluster):</i> http://turbine-hostname:port/turbine.stream
-		<br>
-		<i>Cluster via Turbine (custom cluster):</i> http://turbine-hostname:port/turbine.stream?cluster=[clusterName]
-		<br>
-		<i>Single Hystrix App:</i> http://hystrix-app:port/hystrix.stream
-		<br><br>
-		Delay: <input id="delay" type="textfield" size="10" placeholder="2000"></input>ms
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		Title: <input id="title" type="textfield" size="60" placeholder="Example Hystrix App"></input><br><br>
-		Authorization: <input id="authorization" type="textfield" size="60" placeholder="Basic Zm9vOmJhcg=="></input><br>
-		<br>
-		<button onclick="addStream()">Add Stream</button>
-		<br><br>
-		<ol id='streams'></ol>
-		<br><br>
-		<button onclick="monitorStreams()">Monitor Streams</button>
-		<br><br>
-		<div id="message" style="color:red"></div>
+	<img width="264" height="233" src="./images/hystrix-logo.png">
+	<br>
+	<br>
+
+	<h2>Hystrix Dashboard</h2>
+
+	Eureka URL: <input id="eurekaURL" name="eurekaURL" class="eurekaURL" type="text" size="42" placeholder="http://hostname:8080/eureka/v2/apps"> <br>
+
+	Eureka Application:
+	<select id="eurekaApp" name="eurekaApp" class="eurekaApp">
+		<option selected disabled>Choose here</option>
+	</select>
+
+	Stream Type:
+	Hystrix <input type="radio" name="streamType" value="hystrix.stream">
+	Turbine <input type="radio" name="streamType" value="turbine.stream" checked> <br><br>
+
+	<input id="stream" type="textfield" size="120" placeholder="http://hostname:port/turbine/turbine.stream"></input>
+	<br><br>
+	<i>Cluster via Turbine (default cluster):</i> http://turbine-hostname:port/turbine.stream
+	<br>
+	<i>Cluster via Turbine (custom cluster):</i> http://turbine-hostname:port/turbine.stream?cluster=[clusterName]
+	<br>
+	<i>Single Hystrix App:</i> http://hystrix-app:port/hystrix.stream
+	<br><br>
+	Delay: <input id="delay" type="textfield" size="10" placeholder="2000"></input>ms
+	&nbsp;&nbsp;&nbsp;&nbsp;
+	Title: <input id="title" type="textfield" size="60" placeholder="Example Hystrix App"></input><br><br>
+    Authorization: <input id="authorization" type="textfield" size="60" placeholder="Basic Zm9vOmJhcg=="></input><br>
+	<br>
+	<button onclick="addStream()">Add Stream</button>
+	<br><br>
+	<ol id='streams'></ol>
+	<br><br>
+	<button onclick="monitorStreams()">Monitor Streams</button>
+	<br><br>
+	<div id="message" style="color:red"></div>
+
 	</center>
 </div>
 </body>
